--- a/tootoo-templates/hamburger-theme/hamburger-theme.html
+++ b/tootoo-templates/hamburger-theme/hamburger-theme.html
@@ -37,7 +37,7 @@
 
 	body, html { font: 12pt "Trebuchet MS", helvetica, sans-serif; height: 100%; margin: 0; }
 
-	button, input[ type=button ] { background-color: #ddd; border: none; color: var( --mnu-color ); cursor: pointer; padding: 3px 20px; }
+	button, input[ type=button ] { background-color: #ddd; border: none; cursor: pointer; padding: 3px 20px; }
 
 	iframe { border: none; width: 100%; }
 
@@ -45,12 +45,11 @@
 	input[ type = range ]::-moz-range-thumb { background-color: #888; border-radius: 0; width: 10px; }
 	input[ type = range ]::-webkit-slider-thumb { -webkit-appearance: none; background-color: #888; height: 20px; width: 10px; }
 
-	td { vertical-align: top; }
 
 */
 
 </style>
-<link id=css rel="stylesheet" href="" type="text/css" >
+<link id=css rel="stylesheet" href="" >
 </head>
 <body>
 <script src=https://cdn.rawgit.com/showdownjs/showdown/1.8.6/dist/showdown.min.js ></script>
@@ -92,13 +91,13 @@
 
 				<summary>Footer</summary>
 
-				<div title='Me want too!' ><a href=#../../pages/about-this-cms.md >About this CMS</a></div>
-				<div title='What is this stuff?' ><a href=#../../pages/coding-style.md >Coding style</a></div>
-				<div title='many thanks!' ><a href=#../../pages/credits.md >Credits</a></div>
-				<div><a href=#../../pages/code-of-conduct.md >Code of conduct</a></div>
-				<div><a href=#../../pages/contributing.md >Contributing</a></div>
-				<div><a href=#../../pages/license.md >License</a></div>
-				<div><a href=#../../pages/markdown-help.md >Markdown help</a></div>
+				<div title='Me want too!' ><a href=#https://pushme-pullyou.github.io/pages/about-this-cms.md >About this CMS</a></div>
+				<div title='What is this stuff?' ><a href=#https://pushme-pullyou.github.io/pages/coding-style.md >Coding style</a></div>
+				<div title='many thanks!' ><a href=#https://pushme-pullyou.github.io/pages/credits.md >Credits</a></div>
+				<div><a href=#https://pushme-pullyou.github.io/pages/code-of-conduct.md >Code of conduct</a></div>
+				<div><a href=#https://pushme-pullyou.github.io//pages/contributing.md >Contributing</a></div>
+				<div><a href=#https://pushme-pullyou.github.io//pages/license.md >License</a></div>
+				<div><a href=#https://pushme-pullyou.github.io//pages/markdown-help.md >Markdown help</a></div>
 				<div><a title='Need help' href=https://github.com/pushme-pullyou/pushme-pullyou.github.io/issues target=_blank >🗗 GitHub Issues</a></div>
 				<div><a href="javascript:( function(){ var script=document.createElement('script');script.onload=function(){var stats=new Stats();document.body.appendChild(stats.dom);requestAnimationFrame(function loop(){stats.update();requestAnimationFrame(loop)});};script.src='https://rawgit.com/mrdoob/stats.js/master/build/stats.min.js';document.head.appendChild(script);})()" title="Mr.doob's Stats.js appear in top left corner" >Show frames/second statistics</a></div>
 				<div><a href="https://api.github.com/rate_limit" title='If menu stops appearing, it is likely due to too many API calls' target=_blank >View GitHub API rate limits</a></div>
@@ -136,6 +135,7 @@ let yDown = null;
 
 
 init();
+
 
 
 function init() {
@@ -251,6 +251,58 @@ function setTitle( target ) {
 	<p>
 		${ document.head.querySelector( '[name=description]' ).content }
 	</p>`;
+
+}
+
+
+
+
+function setTestingExtras( target ) {
+
+	const txt = '<p>lorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?<p>';
+
+	target.innerHTML =
+
+	`<details open >
+
+		<summary>Extras</summary>
+
+		<p>
+			<button class="btn btn-primary" >button</button>
+			<button id=active class="btn btn-primary active" >active</button>
+			<button class="btn btn-primary" onclick=active.classList.remove("active"); >remove active</button>
+			<button class="btn btn-primary" onclick=active.classList.add("active"); >add active</button>
+			<button class="btn btn-primary" onclick=active.classList.toggle("active"); >toggle active</button>
+
+		</p>
+
+		<p><a href="#https://pushme-pullyou.github.io/pages/markdown-help.md" >markdown-help.md</a></p>
+
+		<p><a href="#https://pushme-pullyou.github.io/plugins/iframe-carousel-r1.html" >iframe-carousel-r1.html</a></p>
+
+		<p><a href="#https://pushme-pullyou.github.io/plugins/view-github-issues.html" >view-github-issues.html</a></p>
+
+		<p><a href="#https://pushme-pullyou.github.io/plugins/view-stl.html" >view-stl.html</a></p>
+
+		<p><a href="#https://pushme-pullyou.github.io//utilities/invertocat.png" >invertocat.png</a></p>
+
+		<p><a href="https://bootswatch.com" target=_blank >&#x2750; bootswatch.com</a></p>
+
+		<p><a href="https://validator.w3.org/nu/#textarea" target=_blank >&#x2750; validator</a></p>
+
+	</details>
+
+
+	<details>
+
+		<summary>Text</summary>
+
+		${ txt }
+
+		<hr>
+
+	</details>
+	<br>`;
 
 }
 
