--- a/tootoo-templates/hamburger-theme/hamburger-theme.html
+++ b/tootoo-templates/hamburger-theme/hamburger-theme.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8" >
 <meta name="viewport" content = "width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" >
 <meta name=description content="basic html template with sliding menu, css selection, Markdown capability and frequently used pages" >
-<meta name=keywords content="JavaScript,GitHub,FOSS,3D,STEM" >
-<meta name = "date" content = "2018-07-30" >
+<meta name=keywords content="JavaScript,GitHub,FOSS" >
+<meta name = "date" content = "2018-08-17" >
 <title>hamburger theme r1.0</title>
 <style>
 /* Copyright 2018 pushMe pullYou authors. MIT License */
@@ -17,9 +17,10 @@
 	body { height: 100%; margin: 0; }
 
 	a:hover, a:focus { background-color: yellow; color: #888; }
-	blockquote, pre { background-color:rgba(240, 240, 240, 0.25 ); padding: 1rem }
-	button.theme { border-width: 1px; margin: 0.3rem !important; min-width:3rem; }
+
+	blockquote, pre { background-color:rgba(240, 240, 240, 0.25 ); box-sizing: border-box; padding: 1rem }
 	button:hover, input[ type=button ]:hover { background-color: #ccc; color: white }
+	button.theme { border-width: 1px; margin: 0.3rem !important; min-width:3rem; }
 	summary { font-weight: bold; }
 
 	#divContainer { height: 100%; margin: 0 0 0 var( --mnu-width ); transition: margin-left .5s; position: relative; }
