--- a/tootoo-templates/basic-html.html
+++ b/tootoo-templates/basic-html.html
@@ -2,7 +2,7 @@
 <html lang = "en" >
 <head>
 <meta charset = "utf-8" >
-<meta name = "viewport" content= "width=device-width, initial-scale=1">
+<meta name = "viewport" content= "width=device-width, initial-scale=1" >
 <meta name = "description" content = "Basic HTML template" >
 <meta name = "keywords" content = "JavaScript,GitHub,FOSS" >
 <meta name = "date" content = "2018-01-19" >
@@ -34,16 +34,27 @@
 
 <script>
 
+const urlSourceCode = "https://github.com/zzzzz/xxxxx.html";
+
 init();
 
 function init() {
 
-	const title = location.href.split( '/' ).pop().slice( 0, -5 ).replace( /-/g, ' ' );
+	//const title = location.href.split( '/' ).pop().slice( 0, -5 ).replace( /-/g, ' ' );
+
+	document.title = document.title ? document.title : location.href.split( '/' ).pop().slice( 0, - 5 ).replace( /-/g, ' ' );
+
 	//const title = document.title;
 
 	divTitle.innerHTML =
 	`
-		<h1><a href="" >${title}</a></h1>
+		<h1>
+			<a href=${ urlSourceCode } target="_top" title = "Source code on GitHub" >
+				<img src="https://status.github.com/images/invertocat.png" height=18 >
+			</a>
+			<a href="" title = "Click to reload this page" >${ document.title }</a>
+		</h1>
+
 		<p>${document.head.querySelector( '[name=description]' ).content }</p>
 	`;
 
@@ -52,13 +63,12 @@ function init() {
 }
 
 
+
 function setIt() {
 
 	divContents.innerHTML += `<p>Howdy!</p>`;
 
 }
-
-
 
 </script>
 </body>
