--- a/tootoo-templates/z-templates-readme/readme.html
+++ b/tootoo-templates/z-templates-readme/readme.html
@@ -6,7 +6,7 @@
 <body>
 <script>
 
-	window.location.href = '../../index.html#cookbook/templates/README-template.md';
+	window.location.href = '../index.html#xxxxx/README.md';
 
 </script>
 </body>
