--- a/tootoo-templates/threejs-basic.html
+++ b/tootoo-templates/threejs-basic.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8" >
 <meta name="viewport" content = "width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0" >
-<meta name=description content="Real-time 3D in your browser using the Three.js JavaScript library" >
+<meta name=description content="Real-time 3D graphics in your browser using the Three.js JavaScript library" >
 <meta name=keywords content="Three.js,WebGL,JavaScript,GitHub,FOSS,3D,STEM" >
-<meta name = "date" content = "2018-08-11" >
+<meta name = "date" content = "2018-09-02" >
 <title></title>
 <style>
 	/* Copyright 2018 pushMe pullYou authors. MIT License */
@@ -26,8 +26,8 @@
 </style>
 </head>
 <body>
-<script src = "https://cdn.rawgit.com/mrdoob/three.js/r95/build/three.min.js" ></script>
-<script src = "https://cdn.rawgit.com/mrdoob/three.js/r95/examples/js/controls/TrackballControls.js" ></script>
+<script src = "https://cdn.rawgit.com/mrdoob/three.js/r96/build/three.min.js" ></script>
+<script src = "https://cdn.rawgit.com/mrdoob/three.js/r96/examples/js/controls/TrackballControls.js" ></script>
 
 	<div id = "divMenu" >
 
@@ -44,10 +44,8 @@
 
 <script>
 
-/* globals THREE, divTitle, divMenu, hamburger  */
-// jshint esversion: 6
 
-const urlSourceCode = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates/threejs-basic.html";
+const urlSourceCode = "https://github.com/zzzzz/zzzzz.github.io/tree/master/xxxxx/";
 
 let sceneRotation = 1;
 let renderer, camera, controls, scene;
@@ -96,14 +94,14 @@ function setTitle( target ) {
 	target.innerHTML =
 
 	`<h2>
-		<a href=${ urlSourceCode } target="_top" title = "Source code on GitHub" >
-			<img src="https://status.github.com/images/invertocat.png" height=18 >
+		<a href=${ urlSourceCode } target=_top title="Source code on GitHub" >
+			<img src=https://status.github.com/images/invertocat.png height=18 >
 		</a>
-		<a href = "" title = "Click to reload this page" >${ document.title }</a>
+		<a href="" title="Click to reload this page" >${ document.title }</a>
 	</h2>
 
 	<p>
-		${ document.head.querySelector( '[name=description]' ).content }
+		${ document.head.querySelector( "[ name=description ]" ).content }
 	</p>`;
 
 }
