--- a/tootoo-templates/open-markdown-or-html/open-markdown-or-html-r1.html
+++ b/tootoo-templates/open-markdown-or-html/open-markdown-or-html-r1.html
@@ -21,10 +21,10 @@
 <script>
 
 // https://github.com/showdownjs/showdown
-// https://github.com/jaanga/jaanga.github.io/tree/master/cookbook-html/templates2/open-index-or-markdown
+// https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates
 
 	let defaultFile = 'index.html';
-	location.hash = '../../README.md';
+	location.hash = 'README.md';
 
 	let contents;
 
