--- a/tootoo-templates/threejs-lib/thr-threejs.html
+++ b/tootoo-templates/threejs-lib/thr-threejs.html
@@ -28,17 +28,18 @@
 <body>
 <script src = "https://cdn.rawgit.com/mrdoob/three.js/r96/build/three.min.js" ></script>
 <script src = "https://cdn.rawgit.com/mrdoob/three.js/r96/examples/js/controls/TrackballControls.js" ></script>
+<script src="./thr-threejs.js"></script>
 
 	<div id = "divMenu" >
 
 		<div id = "divTitle" ></div>
 
 		<p>
-			<button onclick="sceneRotation = sceneRotation === 1 ? 0 : 1;" >rotation</button>
+			<button onclick="THR.sceneRotation = THR.sceneRotation === 1 ? 0 : 1;" >rotation</button>
 		</p>
-		
+
 		<p>
-			<input type="range" id="inpSpeed" onclick="sceneRotation=0.03 * this.value;" />
+			<input type="range" id="inpSpeed" onclick="THR.sceneRotation=0.03 * this.value;" />
 		</p>
 
 		<div id = "divLog" ></div>
@@ -50,41 +51,22 @@
 
 const urlSourceCode = "https://github.com/zzzzz/zzzzz.github.io/tree/master/xxxxx/";
 
-let sceneRotation = 1;
-let renderer, camera, controls, scene;
 
 init();
-animate();
+
+
 
 function init() {
 
 	divTitle.innerHTML = getTitle();
 
-	renderer = new THREE.WebGLRenderer( { alpha: 1, antialias: true } );
-	renderer.setPixelRatio( window.devicePixelRatio );
-	renderer.setSize( window.innerWidth, window.innerHeight );
-	document.body.appendChild( renderer.domElement );
+	THR.getThreejs();
 
-	camera = new THREE.PerspectiveCamera( 40, window.innerWidth / window.innerHeight, 1, 1000 );
-	camera.position.set( - 100, - 100, 100 );
-	camera.up.set( 0, 0, 1 );
+	THR.animate();
 
-	controls = new THREE.TrackballControls( camera, renderer.domElement );
-
-	scene = new THREE.Scene();
-
-	window.addEventListener( 'resize', onWindowResize, false );
-	window.addEventListener( 'orientationchange', onWindowResize, false );
-	window.addEventListener( 'keyup', () => sceneRotation = 0, false );
-	renderer.domElement.addEventListener( 'click', () => sceneRotation = 0, false );
-
-	const axesHelper = new THREE.AxesHelper( 100 );
-	scene.add( axesHelper );
-
-	const geometry = new THREE.BoxGeometry( 50, 50, 50 );
-	const material = new THREE.MeshNormalMaterial();
-	const mesh = new THREE.Mesh( geometry, material );
-	scene.add( mesh );
+	// just to show we are alive
+	THR.axesHelper = new THREE.AxesHelper( 100 );
+	THR.scene.add( THR.axesHelper );
 
 }
 
@@ -111,31 +93,6 @@ function getTitle() {
 
 }
 
-
-
-function onWindowResize() {
-
-	camera.aspect = window.innerWidth / window.innerHeight;
-	camera.updateProjectionMatrix();
-
-	renderer.setSize( window.innerWidth, window.innerHeight );
-
-	controls.handleResize();
-
-	//console.log( 'onWindowResize  window.innerWidth', window.innerWidth );
-
-}
-
-
-
-function animate() {
-
-	requestAnimationFrame( animate );
-	renderer.render( scene, camera );
-	controls.update();
-	scene.rotation.z += sceneRotation / 1000;
-
-}
 
 </script>
 </body>
