--- a/tootoo-templates/threejs-lib/thru-threejs-utilities.html
+++ b/tootoo-templates/threejs-lib/thru-threejs-utilities.html
@@ -21,6 +21,8 @@
 	input[ type = range ]::-moz-range-thumb { background-color: #888; border-radius: 0; width: 10px; }
 	input[ type = range ]::-webkit-slider-thumb { -webkit-appearance: none; background-color: #888; height: 20px; width: 10px; }
 
+	dummary { font-weight: bold }
+
 	#divMenu { margin: 0 20px; max-width: 15rem; position: absolute; }
 
 </style>
@@ -28,18 +30,20 @@
 <body>
 <script src = "https://cdn.rawgit.com/mrdoob/three.js/r96/build/three.min.js" ></script>
 <script src = "https://cdn.rawgit.com/mrdoob/three.js/r96/examples/js/controls/TrackballControls.js" ></script>
+<script src="./thr-threejs.js"></script>
+<script src="./thru-threejs-utilities.js"></script>
 
 	<div id = "divMenu" >
 
 		<div id = "divTitle" ></div>
 
-		<p>
-			<button onclick="sceneRotation = sceneRotation === 1 ? 0 : 1;" >rotation</button>
-		</p>
-		
-		<p>
-			<input type="range" id="inpSpeed" onclick="sceneRotation=0.03 * this.value;" />
-		</p>
+		<details open >
+
+			<summary>Settings</summary>
+
+			<div id = "divSettings" ></div>
+
+		</details>
 
 		<div id = "divLog" ></div>
 
@@ -50,41 +54,25 @@
 
 const urlSourceCode = "https://github.com/zzzzz/zzzzz.github.io/tree/master/xxxxx/";
 
-let sceneRotation = 1;
-let renderer, camera, controls, scene;
 
 init();
-animate();
+
+
 
 function init() {
 
 	divTitle.innerHTML = getTitle();
 
-	renderer = new THREE.WebGLRenderer( { alpha: 1, antialias: true } );
-	renderer.setPixelRatio( window.devicePixelRatio );
-	renderer.setSize( window.innerWidth, window.innerHeight );
-	document.body.appendChild( renderer.domElement );
+	THR.getThreejs();
 
-	camera = new THREE.PerspectiveCamera( 40, window.innerWidth / window.innerHeight, 1, 1000 );
-	camera.position.set( - 100, - 100, 100 );
-	camera.up.set( 0, 0, 1 );
+	divSettings.innerHTML = THRU.getSettings();
 
-	controls = new THREE.TrackballControls( camera, renderer.domElement );
+	THRU.setHelpers();
 
-	scene = new THREE.Scene();
+	THRU.setGeometry();
 
-	window.addEventListener( 'resize', onWindowResize, false );
-	window.addEventListener( 'orientationchange', onWindowResize, false );
-	window.addEventListener( 'keyup', () => sceneRotation = 0, false );
-	renderer.domElement.addEventListener( 'click', () => sceneRotation = 0, false );
+	THR.animate();
 
-	const axesHelper = new THREE.AxesHelper( 100 );
-	scene.add( axesHelper );
-
-	const geometry = new THREE.BoxGeometry( 50, 50, 50 );
-	const material = new THREE.MeshNormalMaterial();
-	const mesh = new THREE.Mesh( geometry, material );
-	scene.add( mesh );
 
 }
 
@@ -111,31 +99,6 @@ function getTitle() {
 
 }
 
-
-
-function onWindowResize() {
-
-	camera.aspect = window.innerWidth / window.innerHeight;
-	camera.updateProjectionMatrix();
-
-	renderer.setSize( window.innerWidth, window.innerHeight );
-
-	controls.handleResize();
-
-	//console.log( 'onWindowResize  window.innerWidth', window.innerWidth );
-
-}
-
-
-
-function animate() {
-
-	requestAnimationFrame( animate );
-	renderer.render( scene, camera );
-	controls.update();
-	scene.rotation.z += sceneRotation / 1000;
-
-}
 
 </script>
 </body>
