many threejs lib fixes

--- a/tootoo-templates/0-templates-readme/readme-template-01.html
+++ b/tootoo-templates/0-templates-readme/readme-template-01.html
@@ -6,7 +6,7 @@
 <body>
 <script>
 
-	window.location.href = '../index.html#xxxxx/README.md';
+	window.location.href = '../../../index.html#gbxml-viewer/r14/gv-tmp-template/README-template.md';
 
 </script>
 </body>
