three.js lib - many fixes

--- a/tootoo-templates/threejs-lib/r2/cut-section-cut.html
+++ b/tootoo-templates/threejs-lib/r2/cut-section-cut.html
@@ -6,22 +6,22 @@
 <meta name=description content="Very basic script for interactive 3D in your browser using the Three.js JavaScript library" >
 <meta name=keywords content="Three.js,WebGL,JavaScript,GitHub,FOSS,3D,STEM" >
 <meta name = "date" content="2018-09-25" >
-<title>THR Three.js</title>
-<link rel="stylesheet" href="../style.css">
+<title>THR Three.js / Section Cut</title>
+<link rel="stylesheet" href="./lib/style.css">
 </head>
 <body>
 <script src = "https://cdn.rawgit.com/mrdoob/three.js/r96/build/three.min.js" ></script>
 <script src = "https://cdn.rawgit.com/mrdoob/three.js/r96/examples/js/controls/OrbitControls.js" ></script>
-<script src = "../thr-threejs.js" ></script>
-<script src = "../thru-threejs-utilities.js"></script>
-<script src = "../cut-section-cut.js"></script>
+<script src = "./lib/thr-threejs.js" ></script>
+<script src = "./lib/thru-threejs-utilities.js"></script>
+<script src = "./lib/cut-section-cut.js"></script>
 
 
 	<main id="container" ></main>
 
 	<nav id = "navMenu" >
 
-		<header id="navHeader" ><h3><a href="" >howdy world</a></h3></header>
+		<header id="navHeader" ><h3><a href="" >THR Three.js / Section Cut</a></h3></header>
 
 		<details open >
 
