--- a/tootoo-templates/threejs-lib/r2/thr-threejs.html
+++ b/tootoo-templates/threejs-lib/r2/thr-threejs.html
@@ -23,14 +23,14 @@ a:hover, a:focus { background-color: yellow; color: #aaa; text-decoration: under
 <body>
 <script src = "https://cdn.rawgit.com/mrdoob/three.js/r96/build/three.min.js" ></script>
 <script src = "https://cdn.rawgit.com/mrdoob/three.js/r96/examples/js/controls/OrbitControls.js" ></script>
-<script src = "../thr-threejs.js" ></script>
+<script src = "./lib/thr-threejs.js" ></script>
 
 
 	<main id="container" ></main>
 
 	<nav id = "navMenu" >
 
-		<header id="navHeader" ><a href="" >hello world</a></header>
+		<header id="navHeader" ><a href="" >THR Three.js</a></header>
 
 	</nav>
 
