--- a/tootoo-templates/threejs-lib/r2/thru-threejs-utilities.html
+++ b/tootoo-templates/threejs-lib/r2/thru-threejs-utilities.html
@@ -5,15 +5,15 @@
 <meta name="viewport" content = "width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0" >
 <meta name=description content="Real-time interactive 3D graphics in your browser using the WebGL and the Three.js JavaScript library" >
 <meta name=keywords content="Three.js,WebGL,JavaScript,GitHub,FOSS,3D,STEM" >
-<meta name = "date" content = "2018-09-06" >
+<meta name = "date" content = "2018-10-04" >
 <title>THR Three.js Utilities</title>
-<link rel="stylesheet" href="../style.css">
+<link rel="stylesheet" href="./lib/style.css">
 </head>
 <body>
 <script src = "https://cdn.rawgit.com/mrdoob/three.js/r97/build/three.min.js" ></script>
 <script src = "https://cdn.rawgit.com/mrdoob/three.js/r97/examples/js/controls/OrbitControls.js" ></script>
-<script src = "../thr-threejs.js" ></script>
-<script src = "../thru-threejs-utilities.js"></script>
+<script src = "./lib/thr-threejs.js" ></script>
+<script src = "./lib/thru-threejs-utilities.js"></script>
 
 	<main id="container" ></main>
 
