--- a/tootoo-templates/hamburger-theme-api/hamburger-theme-api.html
+++ b/tootoo-templates/hamburger-theme-api/hamburger-theme-api.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8" >
 <meta name="viewport" content = "width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" >
-<meta name=description content="basic html template with sliding menu, css selection, Markdown capability and frequently used pages" >
+<meta name=description content="basic html template with sliding menu, API-driven menu, css selection, Markdown capability and frequently used pages" >
 <meta name=keywords content="JavaScript,GitHub,FOSS,3D,STEM" >
-<meta name = "date" content = "2018-07-30" >
+<meta name = "date" content = "2018-10-09" >
 <title>hamburger theme api r1.0</title>
 <style>
 /* Copyright 2018 pushMe pullYou authors. MIT License */
