--- a/tootoo-templates/basic-html.html
+++ b/tootoo-templates/basic-html.html
@@ -22,38 +22,27 @@
 </head>
 <body>
 
-	<div id = "divMenu" >
+	<div id="divMenu" >
 
-		<div id = "divTitle" ></div>
+		<div id="divTitle" ></div>
 
 		<p><button onclick=setIt(); >howdy button</button></p>
 
 	</div>
 
-	<div id = "divContents" ></div>
+	<div id="divContents" ></div>
 
 
 <script>
 
 const urlSourceCode = "https://github.com/zzzzz/xxxxx.html";
+const urlSourceCodeIcon = "https://status.github.com/images/invertocat.png";
 
 init();
 
 function init() {
 
-	document.title = document.title ? document.title : location.href.split( '/' ).pop().slice( 0, - 5 ).replace( /-/g, ' ' );
-
-	divTitle.innerHTML =
-	`
-		<h1>
-			<a href=${ urlSourceCode } target="_top" title = "Source code on GitHub" >
-				<img src="https://status.github.com/images/invertocat.png" height=18 >
-			</a>
-			<a href="" title = "Click to reload this page" >${ document.title }</a>
-		</h1>
-
-		<p>${document.head.querySelector( '[name=description]' ).content }</p>
-	`;
+	divTitle.innerHTML = getTitle();
 
 	divContents.innerHTML += '<p>lorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?</p>';
 
@@ -61,8 +50,32 @@ function init() {
 
 
 
-function setIt() {
+function getTitle() {
 
+	document.title = document.title ? document.title : location.href.split( '/' ).pop().slice( 0, - 5 ).replace( /-/g, ' ' );
+
+	const htm =
+
+	`
+		<h2>
+			<a href=${ urlSourceCode } target=_top title="Source code on GitHub" >
+				<img src=${ urlSourceCodeIcon } height=18 >
+			</a>
+			<a href="" title="Click to reload this page" >${ document.title }</a>
+		</h2>
+
+		<p>
+			${ document.head.querySelector( "[ name=description ]" ).content }
+		</p>
+	`;
+
+	return htm;
+
+}
+
+
+
+function setIt() {
 
 	divContents.innerHTML += `<p>Howdy!</p>`;
 
