--- a/tootoo-templates/basic-html.html
+++ b/tootoo-templates/basic-html.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset = "utf-8" >
 <meta name = "viewport" content= "width=device-width, initial-scale=1" >
-<meta name = "description" content = "Basic HTML template" >
+<meta name = "description" content = "Basic TooToo HTML template" >
 <meta name = "keywords" content = "JavaScript,GitHub,FOSS" >
-<meta name = "date" content = "2018-08-29" >
+<meta name = "date" content = "2018-12-15" >
 <title></title>
 <style>
 
@@ -16,19 +16,23 @@
 	button, input[type=button] { background-color: #ddd; border: none; color: #322; cursor: pointer; padding: 3px 5px; }
 	button:hover { background: #ccc; color: #fff }
 
-/*	#divMenu { left: 0; margin: 20px; max-width: 300px; position: absolute; top: 0; } */
+	/*
+	#navMenu { background-color: #eee; left: 0; margin: 20px; max-width: 300px; padding: 0 10px; position: absolute; top: 0; }
+	*/
 
 </style>
 </head>
 <body>
 
-	<div id="divMenu" >
+	<nav id="navMenu" >
 
 		<div id="divTitle" ></div>
 
-		<p><button onclick=setIt(); >howdy button</button></p>
+		<p>
+			<button id=but onclick=setIt(); accessKey= 'z' title='access key: z '>button button</button>
+		</p>
 
-	</div>
+	</nav>
 
 	<div id="divContents" ></div>
 
@@ -44,7 +48,15 @@ function init() {
 
 	divTitle.innerHTML = getTitle();
 
-	divContents.innerHTML += '<p>lorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?</p>';
+	divContents.innerHTML += `${ ( new Date ) }<p>lorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?</p>`;
+
+}
+
+
+
+function setIt() {
+
+	divContents.innerHTML += `<p>${ ( performance.now() ) } - Howdy! </p>`;
 
 }
 
@@ -70,14 +82,6 @@ function getTitle() {
 	`;
 
 	return htm;
-
-}
-
-
-
-function setIt() {
-
-	divContents.innerHTML += `<p>Howdy!</p>`;
 
 }
 
