--- a/tootoo-templates/cookbook/index.html
+++ b/tootoo-templates/cookbook/index.html
@@ -17,7 +17,7 @@
 
 	let path, pathFull;
 
-	const repo = 'spider-gbxml-tools'; // rename to repo name
+	const repo = 'pushme-pullyou.github.io'; // rename to repo name
 
 	if ( protocol === 'file:' ) {
 
