--- a/tootoo-templates/hamburger-theme-cms/r2/tootoo-cms.html
+++ b/tootoo-templates/hamburger-theme-cms/r2/tootoo-cms.html
@@ -5,38 +5,80 @@
 <meta name = "viewport" content= "width=device-width, initial-scale=1" >
 <meta name = "description" content = "This menu is a component of a basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop file reading capability, access to frequently used pages and more" >
 <meta name = "keywords" content = "JavaScript,GitHub,FOSS" >
-<meta name = "date" content = "2018-12-31" >
+<meta name = "date" content = "2019-01-01" >
 <title>TooToo CMS</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <script src="https://rawgit.com/showdownjs/showdown/1.9.0/dist/showdown.min.js" ></script>
-<script src="js/thm-theme-select.js" ></script>
-<script src="js/mnu-menu.js" ></script>
-<script src="js/hsh-on-hash-change.js" ></script>
+
 <script>
 
-	MNUcoreCurrentStatus =
-	`
-		<h3>MNU ${ MNU.release} status ${ MNU.date }</h3>
+const COR = { "release": "R11.0", "date": "2019-01-01" };
 
-		<p>TooToo CMS</p>
-	`;
+// For main menu header
+COR.homeText = "pushMe-pullYou";
+COR.homeTitle = "Very simple JavaScript files to help you explore and build new tools on GitHub.";
+COR.homeUrl = "https://pushme-pullyou.github.io";
 
-/*
-	MNU.description =
-	`
-		DEV version<br>Open, examine and edit very large <a href="http://gbxml.org" target="_blank"  title="Thank you, Stephen">gbXML</a> files in 3D in your browser with free, open source
-		<a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank"  title="Thank you, Brendan">JavaScript</a>,
-		<a href="https://en.wikipedia.org/wiki/WebGL" target="_blank" title="Thank you, Ken" >WebGL</a> &
-		<a href="https://en.wikipedia.org/wiki/Three.js" target="_blank" title="Thank you, Ricardo" >Three.js</a>
-		<a class=helpItem href="JavaScript:MNU.setPopupShowHide(this,MNU.currentStatus);"
-		title="Current status: menu MNU module" >&nbsp; ? &nbsp;</a>
-	`;
-*/
+COR.repoText = "TooToo";
+COR.repoTitle = "Basic html templates with sliding menu, css selection, markdown capability and frequently used pages";
+COR.repuUrl = "https://pushme-pullyou.github.io/#tootoo-templates";
+
+COR.appText = "CMS";
+COR.appTitle = "Basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop file reading capability, access to frequently used pages and more";
+COR.appUrl = "https://pushme-pullyou.github.io/#tootoo-templates/hamburger-theme-cms/README.md";
+
+COR.urlSourceCodeImage = "https://status.github.com/images/invertocat.png";
+COR.urlSourceCodeIcon = `<img src="${ COR.urlSourceCodeImage }" height=18 >`;
+COR.urlSourceCodeUrl = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates/hamburger-theme-cms";
+
+// for parsing
+const user = 'pushme-pullyou';
+const repo = '/pushme-pullyou.github.io';
+const pathRepo = '';
+const branch = '/master/'
+
+const iconInfo = '<img src="https://status.github.com/images/invertocat.png" height=18 >';
+const urlGitHubSource = 'https://github.com/' + user + repo;
+const urlGitHubApiContents = 'https://api.github.com/repos/' + user + repo + '/contents/' + pathRepo;
+
+//const urlGitHubPage = location.href.includes( '/' + user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + branch;
+const urlGitHubPage = location.href.includes( repo ) ? '' : 'https://rawgit.com/' + user + repo + branch;
+
+//const urlGitHubPage  = 'https://rawgit.com/' + user + repo + branch;
+//console.log( 'urlGitHubPage', urlGitHubPage );
+
+//	location.hash = '../README.md';
+const uriDefaultFile = 'README.md';
+const urlSourceCode = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates/hamburger-css";
+
+const urlSourceCodeIcon = "https://status.github.com/images/invertocat.png";
+
+
+COR.currentStatus =
+
+`
+	<h3>${ document.head.querySelector( '[ name=date ]' ).content } ~ Current Status</h3>
+
+	<p>Core Status</p>
+
+
+`;
+
+COR.description =
+`
+This menu is a component of a basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop file reading capability, access to frequently used pages and more
+`;
+
 
 </script>
 
+<script src="js/mnu-menu.js" ></script>
+<script src="js/fil-file-open.js" ></script>
+<script src="js/thm-theme-select.js" ></script>
+<script src="js/hsh-on-hash-change.js" ></script>
+<script src="js/tmp-template.js" ></script>
 
 	<nav id="navMenu" >
 
@@ -46,17 +88,34 @@
 
 		</header>
 
-		<section id="HSHsecMenuItems" ></section>
+		<details open >
+
+				<summary class=divMenuTitle >File Menu</summary>
+
+				<section id="HSHsecMenuRepoFilesFolders" ></section>
+
+				<div id=FILdivFileOpen ></div>
+
+				<div id=FILdivFileSave ></div>
+
+			</details>
 
 
-		<section id=THMsecMenuThemeSelect ></section>
+			<details id=detMenuHelp open >
 
+					<summary class=divMenuTitle >Help Menu </summary>
 
-		<footer>
+					<section id=THMsecMenuThemeSelect ></section>
 
-			<section id="MNUdivFooter" ></section>
+					<section id=TMPsecMenuTemplate ></section>
 
-		</footer>
+					<footer>
+
+						<section id = "MNUdivFooter" ></section>
+
+					</footer>
+
+		</details>
 
 		<h1 onclick=navMenu.scrollTop=0; style=cursor:pointer;text-align:center; title='go to top of menu' > ❦ </h1>
 
@@ -88,27 +147,6 @@
 <script>
 
 
-const user = 'pushme-pullyou';
-const repo = '/pushme-pullyou.github.io';
-const pathRepo = '';
-const branch = '/master/'
-
-const iconInfo = '<img src="https://status.github.com/images/invertocat.png" height=18 >';
-const urlGitHubSource = 'https://github.com/' + user + repo;
-const urlGitHubApiContents = 'https://api.github.com/repos/' + user + repo + '/contents/' + pathRepo;
-
-//const urlGitHubPage = location.href.includes( '/' + user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + branch;
-const urlGitHubPage  = 'https://rawgit.com/' + user + repo + branch;
-//console.log( 'urlGitHubPage', urlGitHubPage );
-
-//	location.hash = '../README.md';
-const uriDefaultFile = 'README.md';
-const urlSourceCode = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates/hamburger-css";
-
-const urlSourceCodeIcon = "https://status.github.com/images/invertocat.png";
-
-let xDown = null;
-let yDown = null;
 
 init();
 
@@ -117,9 +155,13 @@ function init() {
 
 	MNUdivHeader.innerHTML = MNU.getNavHeader();
 
-	HSHsecMenuItems.innerHTML = HSH.getMenuItems();
+	HSHsecMenuRepoFilesFolders.innerHTML = HSH.getMenuRepoFilesFolders();
+
+	FILdivFileOpen.innerHTML = FIL.getMenuFileOpen( divPopUpData );
 
 	THMsecMenuThemeSelect.innerHTML = THM.getMenuThemeSelect();
+
+	TMPsecMenuTemplate.innerHTML = TMP.getMenuTemplate();
 
 	MNUdivFooter.innerHTML = MNU.getNavFooter(); // not essential
 
@@ -127,9 +169,10 @@ function init() {
 
 	HSH.onHashChange();
 
-
 }
 
+
+// localStorage.getItem('GitHubPersonalAccessToken' )
 
 function setGPATStorage() {
 
