TooToo13 * Rename and move folder

--- a/tootoo13/tootoo13.html
+++ b/tootoo13/tootoo13.html
@@ -5,8 +5,8 @@
 <meta name = "viewport" content= "width=device-width, initial-scale=1" >
 <meta name = "description" content = "This menu is a component of a basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop file reading capability, access to frequently used pages and more" >
 <meta name = "keywords" content = "JavaScript,GitHub,FOSS" >
-<meta name = "date" content = "2019-01-01" >
-<title>TooToo CMS</title>
+<meta name = "date" content = "2019-01-03" >
+<title>TooToo13</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,24 +14,24 @@
 
 <script>
 
-const COR = { "release": "R11.0", "date": "2019-01-01" };
+const TOO = { "release": "R13.0", "date": "2019-01-03" };
 
 // For main menu header
-COR.homeText = "pushMe-pullYou";
-COR.homeTitle = "Very simple JavaScript files to help you explore and build new tools on GitHub.";
-COR.homeUrl = "https://pushme-pullyou.github.io";
+TOO.homeText = "pushMe-pullYou";
+TOO.homeTitle = "Very simple JavaScript files to help you explore and build new tools on GitHub.";
+TOO.homeUrl = "https://pushme-pullyou.github.io";
 
-COR.repoText = "TooToo";
-COR.repoTitle = "Basic html templates with sliding menu, css selection, markdown capability and frequently used pages";
-COR.repuUrl = "https://pushme-pullyou.github.io/#tootoo-templates";
+TOO.repoText = "TooToo";
+TOO.repoTitle = "Basic html templates with sliding menu, css selection, markdown capability and frequently used pages";
+TOO.repuUrl = "https://pushme-pullyou.github.io/#tootoo-templates";
 
-COR.appText = "CMS";
-COR.appTitle = "Basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop file reading capability, access to frequently used pages and more";
-COR.appUrl = "https://pushme-pullyou.github.io/#tootoo-templates/hamburger-theme-cms/README.md";
+TOO.appText = "CMS";
+TOO.appTitle = "Basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop file reading capability, access to frequently used pages and more";
+TOO.appUrl = "https://pushme-pullyou.github.io/#tootoo-templates/hamburger-theme-cms/README.md";
 
-COR.urlSourceCodeImage = "https://status.github.com/images/invertocat.png";
-COR.urlSourceCodeIcon = `<img src="${ COR.urlSourceCodeImage }" height=18 >`;
-COR.urlSourceCodeUrl = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates/hamburger-theme-cms";
+TOO.urlSourceCodeImage = "https://status.github.com/images/invertocat.png";
+TOO.urlSourceCodeIcon = `<img src="${ TOO.urlSourceCodeImage }" height=18 >`;
+TOO.urlSourceCodeUrl = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates/hamburger-theme-cms";
 
 // for parsing
 const user = 'pushme-pullyou';
@@ -56,17 +56,17 @@ const urlSourceCode = "https://github.com/pushme-pullyou/pushme-pullyou.github.i
 const urlSourceCodeIcon = "https://status.github.com/images/invertocat.png";
 
 
-COR.currentStatus =
+TOO.currentStatus =
 
 `
 	<h3>${ document.head.querySelector( '[ name=date ]' ).content } ~ Current Status</h3>
 
-	<p>Core Status</p>
+	<p>TOOe Status</p>
 
 
 `;
 
-COR.description =
+TOO.description =
 `
 This menu is a component of a basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop file reading capability, access to frequently used pages and more
 `;
