--- a/tootoo13/index.html
+++ b/tootoo13/index.html
@@ -6,7 +6,7 @@
 <body>
 <script>
 
-	window.location.href = './tootoo-cms.html' + location.hash;
+	window.location.href = './tootoo13.html' + location.hash;
 
 </script>
 </body>
