--- a/tootoo13/cookbook/ohc-on-hash-change/ohc-on-hash-change.html
+++ b/tootoo13/cookbook/ohc-on-hash-change/ohc-on-hash-change.html
@@ -58,7 +58,7 @@
 		<p>
 			<button id=but onclick=location.hash="https://raw.githubusercontent.com/ladybug-tools/spider/master/gbxml-sample-files/golden-co-open-studio-seb.xml"; accessKey= 'z' title='access key: z ' >golden-co-open-studio-seb.xml</button>
 		</p>
-		
+
 	</nav>
 
 	<div id="divContents" ></div>
@@ -66,29 +66,24 @@
 
 <script>
 
+
 // for parsing
 const uriDefaultFile = '../../README.md';
-//const urlGitHubPage = location.href.includes( '/' + user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + branch;
-//const urlGitHubPage = location.href.includes( repo ) ? '' : 'https://rawgit.com/' + user + repo + branch;
 
-const user = 'pushme-pullyou';
-const repo = '/pushme-pullyou.github.io';
-const pathRepo = '';
-const branch = '/master/';
+OHC.user = 'pushme-pullyou';
+OHC.repo = '/pushme-pullyou.github.io';
+OHC.pathRepo = '';
+OHC.branch = '/master/';
 
-const urlGitHubPage  = 'https://rawgit.com/' + user + repo + branch;
-//console.log( 'urlGitHubPage', urlGitHubPage );
-
-
-const iconInfo = '<img src="https://status.github.com/images/invertocat.png" height=18 >';
-const urlGitHubSource = 'https://github.com/' + user + repo;
-const urlGitHubApiContents = 'https://api.github.com/repos/' + user + repo + '/contents/' + pathRepo;
+OHC.urlSourceCode = "https://github.com/zzzzz/xxxxx.html";
+OHC.urlSourceCodeIcon = "https://status.github.com/images/invertocat.png";
+OHC.iconInfo = `<img src="${ OHC.urlSourceCodeIcon }" height=18 >`;
 
 
-const urlSourceCode = "https://github.com/zzzzz/xxxxx.html";
-const urlSourceCodeIcon = "https://status.github.com/images/invertocat.png";
 
 init();
+
+
 
 function init() {
 
@@ -119,8 +114,8 @@ function getTitle() {
 	const htm =
 	`
 		<h2>
-			<a href=${ urlSourceCode } target=_top title="Source code on GitHub" >
-				<img src=${ urlSourceCodeIcon } height=18 >
+			<a href=${ OHC.urlSourceCode } target=_top title="Source code on GitHub" >
+				${ OHC.iconInfo }
 			</a>
 			<a href="" title="Click to reload this page" >${ document.title }</a>
 		</h2>
