--- a/tootoo13/tootoo13.html
+++ b/tootoo13/tootoo13.html
@@ -5,48 +5,52 @@
 <meta name = "viewport" content= "width=device-width, initial-scale=1" >
 <meta name = "description" content = "This menu is a component of a basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop file reading capability, access to frequently used pages and more" >
 <meta name = "keywords" content = "JavaScript,GitHub,FOSS" >
-<meta name = "date" content = "2019-01-03" >
+<meta name = "date" content = "2019-01-04" >
 <title>TooToo13</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <script src="https://rawgit.com/showdownjs/showdown/1.9.0/dist/showdown.min.js" ></script>
-
+<script src="js/mnu-menu.js" ></script>
+<script src="js/fob-file-open-basic.js" ></script>
+<script src="js/thm-theme-select.js" ></script>
+<script src="js/ohc-on-hash-change.js" ></script>
+<script src="js/tmp-template.js" ></script>
 <script>
 
-const TOO = { "release": "R13.0", "date": "2019-01-03" };
+const TOO = { "release": "R13.1", "date": "2019-01-04" };
 
 // For main menu header
-TOO.homeText = "pushMe-pullYou";
-TOO.homeTitle = "Very simple JavaScript files to help you explore and build new tools on GitHub.";
-TOO.homeUrl = "https://pushme-pullyou.github.io";
+MNU.homeText = "pushMe-pullYou";
+MNU.homeTitle = "Very simple JavaScript files to help you explore and build new tools on GitHub.";
+MNU.homeUrl = "https://pushme-pullyou.github.io";
 
-TOO.repoText = "TooToo";
-TOO.repoTitle = "Basic html templates with sliding menu, css selection, markdown capability and frequently used pages";
-TOO.repuUrl = "https://pushme-pullyou.github.io/#tootoo-templates";
+MNU.repoText = "TooToo";
+MNU.repoTitle = "Basic html templates with sliding menu, css selection, markdown capability and frequently used pages";
+MNU.repuUrl = "https://pushme-pullyou.github.io/#tootoo-templates";
 
-TOO.appText = "CMS";
-TOO.appTitle = "Basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop file reading capability, access to frequently used pages and more";
-TOO.appUrl = "https://pushme-pullyou.github.io/#tootoo-templates/hamburger-theme-cms/README.md";
+MNU.appText = "CMS";
+MNU.appTitle = "Basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop file reading capability, access to frequently used pages and more";
+MNU.appUrl = "https://pushme-pullyou.github.io/#tootoo-templates/hamburger-theme-cms/README.md";
 
-TOO.urlSourceCodeImage = "https://status.github.com/images/invertocat.png";
-TOO.urlSourceCodeIcon = `<img src="${ TOO.urlSourceCodeImage }" height=18 >`;
-TOO.urlSourceCodeUrl = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates/hamburger-theme-cms";
+MNU.urlSourceCodeImage = "https://status.github.com/images/invertocat.png";
+MNU.urlSourceCodeIcon = `<img src="${ MNU.urlSourceCodeImage }" height=18 >`;
+MNU.urlSourceCodeUrl = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates/hamburger-theme-cms";
 
 // for parsing
-const user = 'pushme-pullyou';
-const repo = '/pushme-pullyou.github.io';
-const pathRepo = '';
-const branch = '/master/'
+OHC.user = 'pushme-pullyou';
+OHC.repo = '/pushme-pullyou.github.io';
+OHC.pathRepo = '';
+OHC.branch = '/master/'
 
-const iconInfo = '<img src="https://status.github.com/images/invertocat.png" height=18 >';
-const urlGitHubSource = 'https://github.com/' + user + repo;
-const urlGitHubApiContents = 'https://api.github.com/repos/' + user + repo + '/contents/' + pathRepo;
+//OHC.iconInfo = '<img src="https://status.github.com/images/invertocat.png" height=18 >';
+//const urlGitHubSource = 'https://github.com/' + OHC.user + repo;
+//const urlGitHubApiContents = 'https://api.github.com/repos/' + user + repo + '/contents/' + pathRepo;
 
 //const urlGitHubPage = location.href.includes( '/' + user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + branch;
 //const urlGitHubPage = location.href.includes( repo ) ? '' : 'https://rawgit.com/' + user + repo + branch;
 
-const urlGitHubPage  = 'https://rawgit.com/' + user + repo + branch;
+//const urlGitHubPage  = 'https://rawgit.com/' + user + repo + branch;
 //console.log( 'urlGitHubPage', urlGitHubPage );
 
 //	location.hash = '../README.md';
@@ -54,10 +58,14 @@ const uriDefaultFile = 'README.md';
 
 const urlSourceCode = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates/hamburger-css";
 
-const urlSourceCodeIcon = "https://status.github.com/images/invertocat.png";
+//const urlSourceCodeIcon = "https://status.github.com/images/invertocat.png";
 
 
-TOO.currentStatus =
+OHC.urlSourceCode = "https://github.com/zzzzz/xxxxx.html";
+OHC.urlSourceCodeIcon = "https://status.github.com/images/invertocat.png";
+OHC.iconInfo = `<img src="${ OHC.urlSourceCodeIcon }" height=18 >`;
+
+MNU.currentStatus =
 	`
 		<h3>${ document.head.querySelector( '[ name=date ]' ).content } ~ Current Status</h3>
 
@@ -65,7 +73,7 @@ TOO.currentStatus =
 
 	`;
 
-TOO.description =
+MNU.description =
 `
 This menu is a component of a basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop file reading capability, access to frequently used pages and more
 `;
@@ -73,11 +81,8 @@ This menu is a component of a basic html content management script with sliding 
 
 </script>
 
-<script src="js/mnu-menu.js" ></script>
-<script src="js/fob-file-open-basic.js" ></script>
-<script src="js/thm-theme-select.js" ></script>
-<script src="js/ohc-on-hash-change.js" ></script>
-<script src="js/tmp-template.js" ></script>
+
+
 
 	<nav id="navMenu" >
 
@@ -93,7 +98,7 @@ This menu is a component of a basic html content management script with sliding 
 
 			<section id="OHCsecMenuRepoFilesFolders" ></section>
 
-			<div id=FOBdivFileOpenBasic ></div>
+			<section id=FOBsecFileOpenBasic ></section>
 
 			<div id=FILdivFileSave ></div>
 
@@ -156,7 +161,7 @@ function init() {
 
 	OHCsecMenuRepoFilesFolders.innerHTML = OHC.getMenuRepoFilesFolders();
 
-	FOBdivFileOpenBasic.innerHTML = FOB.getMenuFileOpenBasic( divContents, divPopUpData );
+	FOBsecFileOpenBasic.innerHTML = FOB.getMenuFileOpenBasic( divContents, divPopUpData );
 
 	THMsecMenuThemeSelect.innerHTML = THM.getMenuThemeSelect();
 
