tootoo13 gh access token

--- a/tootoo13/cookbook/ohc-on-hash-change/ohc-on-hash-change.html
+++ b/tootoo13/cookbook/ohc-on-hash-change/ohc-on-hash-change.html
@@ -16,6 +16,7 @@
 	button, input[type=button] { background-color: #ddd; border: none; color: #322; cursor: pointer; padding: 3px 5px; }
 	button:hover { background: #ccc; color: #fff }
 
+	input { width: 100%; }
 	.divMenuTitle { background-color: #ccc; color: #888; margin: 10px 0; text-align: center; }
 
 	#navMenu { background-color: #eee; left: 0; margin: 20px; max-width: 300px; padding: 0 10px; position: absolute; top: 0; }
