--- a/tootoo13/tootoo13.html
+++ b/tootoo13/tootoo13.html
@@ -5,7 +5,7 @@
 <meta name = "viewport" content= "width=device-width, initial-scale=1" >
 <meta name = "description" content = "This menu is a component of a basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop file reading capability, access to frequently used pages and more" >
 <meta name = "keywords" content = "JavaScript,GitHub,FOSS" >
-<meta name = "date" content = "2019-01-04" >
+<meta name = "date" content = "2019-01-05" >
 <title>TooToo13</title>
 <link rel="stylesheet" href="style.css">
 </head>
@@ -18,23 +18,39 @@
 <script src="js/tmp-template.js" ></script>
 <script>
 
-const TOO = { "release": "R13.1", "date": "2019-01-04" };
+
+MNU.currentStatusCore =
+	`
+		<h3>${ document.head.querySelector( '[ name=date ]' ).content } ~ TooToo13 Current Status</h3>
+
+		<p>TooToo Status</p>
+	`;
+
+MNU.descriptionCore =
+	`
+	This menu is a component of a basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop file reading capability, access to frequently used pages and more
+	`;
+
+const uriDefaultFile = 'README.md';
+
+const urlSourceCode = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates/hamburger-css";
+
+const urlSourceCodeImage = "https://status.github.com/images/invertocat.png";
 
 // For main menu header
 MNU.homeText = "pushMe-pullYou";
 MNU.homeTitle = "Very simple JavaScript files to help you explore and build new tools on GitHub.";
 MNU.homeUrl = "https://pushme-pullyou.github.io";
 
-MNU.repoText = "TooToo";
+MNU.repoText = "TooToo13";
 MNU.repoTitle = "Basic html templates with sliding menu, css selection, markdown capability and frequently used pages";
-MNU.repuUrl = "https://pushme-pullyou.github.io/#tootoo-templates";
+MNU.repoUrl = "https://pushme-pullyou.github.io/tootoo13";
 
-MNU.appText = "CMS";
-MNU.appTitle = "Basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop file reading capability, access to frequently used pages and more";
-MNU.appUrl = "https://pushme-pullyou.github.io/#tootoo-templates/hamburger-theme-cms/README.md";
+MNU.appText = "";// "CMS";
+MNU.appTitle = ""; //"Basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop file reading capability, access to frequently used pages and more";
+MNU.appUrl = ""; //"https://pushme-pullyou.github.io/#tootoo-templates/hamburger-theme-cms/README.md";
 
-MNU.urlSourceCodeImage = "https://status.github.com/images/invertocat.png";
-MNU.urlSourceCodeIcon = `<img src="${ MNU.urlSourceCodeImage }" height=18 >`;
+MNU.urlSourceCodeIcon = `<img src="${ urlSourceCodeImage }" height=18 >`;
 MNU.urlSourceCodeUrl = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates/hamburger-theme-cms";
 
 // for parsing
@@ -43,46 +59,10 @@ OHC.repo = '/pushme-pullyou.github.io';
 OHC.pathRepo = '';
 OHC.branch = '/master/'
 
-//OHC.iconInfo = '<img src="https://status.github.com/images/invertocat.png" height=18 >';
-//const urlGitHubSource = 'https://github.com/' + OHC.user + repo;
-//const urlGitHubApiContents = 'https://api.github.com/repos/' + user + repo + '/contents/' + pathRepo;
-
-//const urlGitHubPage = location.href.includes( '/' + user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + branch;
-//const urlGitHubPage = location.href.includes( repo ) ? '' : 'https://rawgit.com/' + user + repo + branch;
-
-//const urlGitHubPage  = 'https://rawgit.com/' + user + repo + branch;
-//console.log( 'urlGitHubPage', urlGitHubPage );
-
-//	location.hash = '../README.md';
-const uriDefaultFile = 'README.md';
-
-const urlSourceCode = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates/hamburger-css";
-
-//const urlSourceCodeIcon = "https://status.github.com/images/invertocat.png";
-
-
-OHC.urlSourceCode = "https://github.com/zzzzz/xxxxx.html";
-OHC.urlSourceCodeIcon = "https://status.github.com/images/invertocat.png";
-OHC.iconInfo = `<img src="${ OHC.urlSourceCodeIcon }" height=18 >`;
-
-MNU.currentStatus =
-	`
-		<h3>${ document.head.querySelector( '[ name=date ]' ).content } ~ Current Status</h3>
-
-		<p>TOOe Status</p>
-
-	`;
-
-MNU.description =
-`
-This menu is a component of a basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop file reading capability, access to frequently used pages and more
-`;
+OHC.iconInfo = `<img src="${ urlSourceCodeImage }" height=18 >`;
 
 
 </script>
-
-
-
 
 	<nav id="navMenu" >
 
