--- a/tootoo13/prototypes/spider-gbxml-tools/spider-gbxml-tools (LAPTOP-3C39P9D2's conflicted copy 2019-01-08).html
+++ b/tootoo13/prototypes/spider-gbxml-tools/spider-gbxml-tools (LAPTOP-3C39P9D2's conflicted copy 2019-01-08).html
@@ -7,69 +7,69 @@
 <meta name = "keywords" content = "JavaScript,GitHub,FOSS" >
 <meta name = "date" content = "2019-01-08" >
 <meta name = "release" content = "13.1" >
-<title>TooToo13</title>
-<link rel="stylesheet" href="js13/style.css">
+<title>Spider gbXML Tools</title>
+<link rel="stylesheet" href="../../js13/style.css">
 </head>
 <body>
 <script src="https://rawgit.com/showdownjs/showdown/1.9.0/dist/showdown.min.js" ></script>
 
-<script src="js13/mnu-menu.js" ></script>
-<script src="js13/fob-file-open-basic.js" ></script>
-<script src="js13/thm-theme-select.js" ></script>
-<script src="js13/ohc-on-hash-change.js" ></script>
-<script src="js13/tmp-template.js" ></script>
+<script src="../../js13/mnu-menu.js" ></script>
+<script src="fls-files-selected.js" ></script>
+<script src="../../js13/fob-file-open-basic.js" ></script>
+<script src="../../js13/thm-theme-select.js" ></script>
+<script src="../../js13/ohc-on-hash-change.js" ></script>
+<script src="../../js13/tmp-template.js" ></script>
 <script>
 
 
 MNU.currentStatusCore =
 	`
 		<h3>
-			TooToo
+			Spider gbXML Tools
 			R${ document.head.querySelector( '[ name=release ]' ).content }
 			~
 			${ document.head.querySelector( '[ name=date ]' ).content }
 		</h3>
 
-		<p>TooToo Status</p>
+		<p>Status</p>
 	`;
 
 MNU.descriptionCore =
 	`
-		<p>
-			This menu is a component of a basic html content management script with sliding menu, CSS theme selection, Markdown to HTML, drag and drop file reading capability, access to frequently used pages and more
-		</p>
+		Scripts to help you view and manage <a href="http://gbxml.org" target="_blank">gbXML</a> files
 	`;
 
 
 const uriDefaultFile = 'README.md';
 
-THM.cssBasic = "js13/style.css";
+THM.cssBasic = "../../js13/style.css";
 
 // For main menu header
-MNU.urlSourceCode = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates/hamburger-css";
+MNU.urlSourceCodeUrl="https://github.com/ladybug-tools/spider-gbxml-tools/tree/master/sandbox/spider-gbxml-text-parser";
 
-MNU.homeText = "pushMe-pullYou";
-MNU.homeTitle = "Very simple JavaScript files to help you explore and build new tools on GitHub.";
-MNU.homeUrl = "https://pushme-pullyou.github.io";
+MNU.homeText="<img src='https://ladybug.tools/artwork/icons_bugs/ico/ladybug.ico' height=24 >";
+MNU.homeTitle="Ladybug Tools: free computer applications that support environmental design and education";
+MNU.homeUrl="https://www.ladybug.tools";
 
-MNU.repoText = "TooToo13";
-MNU.repoTitle = "Basic html templates with sliding menu, css selection, markdown capability and frequently used pages";
-MNU.repoUrl = "https://pushme-pullyou.github.io/tootoo13";
+MNU.repoText="<img src='https://ladybug.tools/artwork/icons_bugs/ico/spider.ico' height=24 >";
+MNU.repoTitle="Spider: 3D interactive analysis in your browser mostly written around the Three.js JavaScript library";
+MNU.repoUrl="https://www.ladybug.tools/spider/";
 
-MNU.appText = "";// "CMS";
-MNU.appTitle = ""; //"Basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop file reading capability, access to frequently used pages and more";
-MNU.appUrl = ""; //"https://pushme-pullyou.github.io/#tootoo-templates/hamburger-theme-cms/README.md";
+MNU.appText= ""; //"gbXML Tools";
+MNU.appTitle = ""; //"Tools to help you find, load, examine and edit gbXML files - in large numbers and sizes";
+MNU.appUrl = ""; //"https://www.ladybug.tools/spider-gbxml-tools/";
 
 MNU.urlSourceCodeImage="https://status.github.com/images/invertocat.png";
 MNU.urlSourceCodeIcon=`<img src="${ MNU.urlSourceCodeImage }" height=18 >`;
 
+
 // for parsing
-OHC.user = 'pushme-pullyou';
-OHC.repo = 'pushme-pullyou.github.io';
+OHC.user = 'ladybug-tools';
+OHC.repo = 'spider-gbxml-tools';
 OHC.pathRepo = '';
 OHC.branch = '/master/';
 
-OHC.urlGitHubPage = location.href.includes( OHC.repo ) ? '../' : 'https://' + OHC.repo + "/";
+OHC.urlGitHubPage  = "https://www.ladybug.tools/" + OHC.repo + "/";
 
 
 
@@ -87,11 +87,13 @@ OHC.urlGitHubPage = location.href.includes( OHC.repo ) ? '../' : 'https://' + OH
 
 				<summary class=divMenuTitle >File Menu</summary>
 
+				<section id="FLSsecSelectedFiles" ></section>
+
 				<section id="OHCsecMenuRepoFilesFolders" ></section>
 
 				<section id=FOBsecFileOpenBasic ></section>
 
-				<div id="FILdivFileSave" ></div>
+				<section id=FILdivFileSave ></section>
 
 			</details>
 
@@ -112,7 +114,7 @@ OHC.urlGitHubPage = location.href.includes( OHC.repo ) ? '../' : 'https://' + OH
 
 		</details>
 
-		<h1 onclick=navMenu.scrollTop=0; style=cursor:pointer;text-align:center; title='go to top of menu' > ❦ </h1>
+		<h1 onclick=navMenu.scrollTop=0; style=cursor:pointer;text-align:center; title="go to top of menu" > ❦ </h1>
 
 	</nav>
 
@@ -151,6 +153,8 @@ function init() {
 	MNUdivHeader.innerHTML = MNU.getNavHeader();
 
 	OHCsecMenuRepoFilesFolders.innerHTML = OHC.getMenuRepoFilesFolders();
+
+	FLSsecSelectedFiles.innerHTML = FLS.getMenuSelectedFiles();
 
 	FOBsecFileOpenBasic.innerHTML = FOB.getMenuFileOpenBasic( divContents, divPopUpData );
 
