--- a/tootoo-more/plugins/view-stl.html
+++ b/tootoo-more/plugins/view-stl.html
@@ -34,6 +34,8 @@
 
 	fileName = '#https://va3c.github.io/viewer/samples/NPP_16.stl';
 	fileName = '#https://jaanga.github.io/cookbook-threejs/viewers/models/original-nimble-scooter.stl';
+	//fileName = "#https://rawgit.com/nasa/NASA-3D-Resources/master/3D%20Printing//Voyager%20(2017)/Stand.stl"
+	fileName = "#https://cdn.jsdelivr.net/gh/nasa/NASA-3D-Resources@master/3D%20Printing//Voyager%20(2017)/Stand.stl"
 
 	var axisHelper;
 	var renderer, camera, controls, scene;
